# AFTSA

./: LICENSE  LISCENCE.txt  pyproject.toml  readme.md
AFTSA/: __main__.py  funcs.py
AFTSA.egg-info/: SOURCES.txt  top_level.txt
dev-env/: pyvenv.cfg
src/AFTSA/: __main__.py  intervals.py  randoms.py
src/AFTSA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
